# cordcutter

./: README.md  bot-example.py  example.py  pyproject.toml
cordcutter/: __init__.py
